--- a/WeekendTaskMVCProject/WeekendTaskMVC/Views/Home/Index.cshtml
+++ b/WeekendTaskMVCProject/WeekendTaskMVC/Views/Home/Index.cshtml
@@ -1,4 +1,7 @@
-﻿@{
+﻿@model.WeekendTaskMVC.Models.HomeViewModel
+
+
+@{
     ViewBag.Title = "Home Page";
 }
 <!-- #Content -->
@@ -7,6 +10,7 @@
     <div class="rev_slider_wrapper">
         <div class="rev_slider" id="slide-1" data-version="5.4.4">
             <ul>
+
                 <li data-transition="fade">
                     <img src="~/Public/images/slide_01.jpg" alt="Work" class="rev-slidebg">
                     <div class="tp-caption slide-heading-2" data-x="center" data-y="center" data-transform_in="y:-80px;opacity:0;s:800;e:easeInOutCubic;" data-transform_out="y:-80px;opacity:0;s:300;" data-voffset="-70" data-start="900" data-fontsize="['30','30','24', '24']">work hard</div>
