--- a/WeekendTaskMVCProject/WeekendTaskMVC/Views/Home/Index.cshtml
+++ b/WeekendTaskMVCProject/WeekendTaskMVC/Views/Home/Index.cshtml
@@ -1,40 +1,44 @@
-﻿@model.WeekendTaskMVC.Models.HomeViewModel
-
-
-@{
+﻿@{
     ViewBag.Title = "Home Page";
 }
+@model WeekendTaskMVC.Models.HomeViewModel
 <!-- #Content -->
 <!-- Slider -->
 <section>
+
     <div class="rev_slider_wrapper">
         <div class="rev_slider" id="slide-1" data-version="5.4.4">
             <ul>
+                @foreach (var slide in Model.Slider)
+                {
+                    <li data-transition="fade">
+                        <img src="~/Public/images/@slide.Link" alt="Work" class="rev-slidebg">
+                        <div class="tp-caption slide-heading-2" data-x="center" data-y="center" data-transform_in="y:-80px;opacity:0;s:800;e:easeInOutCubic;" data-transform_out="y:-80px;opacity:0;s:300;" data-voffset="-70" data-start="900" data-fontsize="['30','30','24', '24']">@slide.FirstTitle</div>
+                        <div class="tp-caption slide-heading-1" data-x="center" data-y="center" data-transform_in="y:80px;opacity:0;s:800;e:easeInOutCubic;" data-transform_out="y:80px;opacity:0;s:300;" data-start="1300" data-fontsize="['72','72','52','50','46', '42']">@slide.SecondTitle</div>
+                        <div class="tp-caption" data-x="center" data-y="center" data-transform_in="y:100px;opacity:0;s:800;e:easeInOutCubic;" data-transform_out="y:200px;opacity:0;s:300;" data-voffset="95" data-start="1600">
+                            <a href="#" class="slide-button">Get Started</a>
+                        </div>
+                    </li>
+                }
 
-                <li data-transition="fade">
-                    <img src="~/Public/images/slide_01.jpg" alt="Work" class="rev-slidebg">
-                    <div class="tp-caption slide-heading-2" data-x="center" data-y="center" data-transform_in="y:-80px;opacity:0;s:800;e:easeInOutCubic;" data-transform_out="y:-80px;opacity:0;s:300;" data-voffset="-70" data-start="900" data-fontsize="['30','30','24', '24']">work hard</div>
-                    <div class="tp-caption slide-heading-1" data-x="center" data-y="center" data-transform_in="y:80px;opacity:0;s:800;e:easeInOutCubic;" data-transform_out="y:80px;opacity:0;s:300;" data-start="1300" data-fontsize="['72','72','52','50','46', '42']">Dream Big</div>
-                    <div class="tp-caption" data-x="center" data-y="center" data-transform_in="y:100px;opacity:0;s:800;e:easeInOutCubic;" data-transform_out="y:200px;opacity:0;s:300;" data-voffset="95" data-start="1600">
-                        <a href="#" class="slide-button">Get Started</a>
-                    </div>
-                </li>
-                <li data-transition="fade">
-                    <img src="~/Public/images/slide_02.jpg" alt="Work" class="rev-slidebg">
-                    <div class="tp-caption slide-heading-2" data-x="center" data-y="center" data-transform_in="y:-80px;opacity:0;s:800;e:easeInOutCubic;" data-transform_out="y:-80px;opacity:0;s:300;" data-voffset="-70" data-start="900" data-fontsize="['30','30','24', '24']">work hard</div>
-                    <div class="tp-caption slide-heading-1" data-x="center" data-y="center" data-transform_in="y:80px;opacity:0;s:800;e:easeInOutCubic;" data-transform_out="y:80px;opacity:0;s:300;" data-start="1300" data-fontsize="['72','72','52','50','46','42']">Dream Big</div>
-                    <div class="tp-caption" data-x="center" data-y="center" data-transform_in="y:100px;opacity:0;s:800;e:easeInOutCubic;" data-transform_out="y:200px;opacity:0;s:300;" data-voffset="95" data-start="1600">
-                        <a href="#" class="slide-button">Get Started</a>
-                    </div>
-                </li>
-                <li data-transition="fade">
-                    <img src="~/Public/images/slide_03.jpg" alt="Work" class="rev-slidebg">
-                    <div class="tp-caption slide-heading-2" data-x="center" data-y="center" data-transform_in="y:-80px;opacity:0;s:800;e:easeInOutCubic;" data-transform_out="y:-80px;opacity:0;s:300;" data-voffset="-70" data-start="900" data-fontsize="['30','30','24','24']">work hard</div>
-                    <div class="tp-caption slide-heading-1" data-x="center" data-y="center" data-transform_in="y:80px;opacity:0;s:800;e:easeInOutCubic;" data-transform_out="y:80px;opacity:0;s:300;" data-start="1300" data-fontsize="['72','72','52','50' ,'46', '42']">Dream Big</div>
-                    <div class="tp-caption" data-x="center" data-y="center" data-transform_in="y:100px;opacity:0;s:800;e:easeInOutCubic;" data-transform_out="y:200px;opacity:0;s:300;" data-voffset="95" data-start="1600">
-                        <a href="#" class="slide-button">Get Started</a>
-                    </div>
-                </li>
+
+
+                @*<li data-transition="fade">
+                        <img src="~/Public/images/slide_02.jpg" alt="Work" class="rev-slidebg">
+                        <div class="tp-caption slide-heading-2" data-x="center" data-y="center" data-transform_in="y:-80px;opacity:0;s:800;e:easeInOutCubic;" data-transform_out="y:-80px;opacity:0;s:300;" data-voffset="-70" data-start="900" data-fontsize="['30','30','24', '24']">work hard</div>
+                        <div class="tp-caption slide-heading-1" data-x="center" data-y="center" data-transform_in="y:80px;opacity:0;s:800;e:easeInOutCubic;" data-transform_out="y:80px;opacity:0;s:300;" data-start="1300" data-fontsize="['72','72','52','50','46','42']">Dream Big</div>
+                        <div class="tp-caption" data-x="center" data-y="center" data-transform_in="y:100px;opacity:0;s:800;e:easeInOutCubic;" data-transform_out="y:200px;opacity:0;s:300;" data-voffset="95" data-start="1600">
+                            <a href="#" class="slide-button">Get Started</a>
+                        </div>
+                    </li>
+                    <li data-transition="fade">
+                        <img src="~/Public/images/slide_03.jpg" alt="Work" class="rev-slidebg">
+                        <div class="tp-caption slide-heading-2" data-x="center" data-y="center" data-transform_in="y:-80px;opacity:0;s:800;e:easeInOutCubic;" data-transform_out="y:-80px;opacity:0;s:300;" data-voffset="-70" data-start="900" data-fontsize="['30','30','24','24']">work hard</div>
+                        <div class="tp-caption slide-heading-1" data-x="center" data-y="center" data-transform_in="y:80px;opacity:0;s:800;e:easeInOutCubic;" data-transform_out="y:80px;opacity:0;s:300;" data-start="1300" data-fontsize="['72','72','52','50' ,'46', '42']">Dream Big</div>
+                        <div class="tp-caption" data-x="center" data-y="center" data-transform_in="y:100px;opacity:0;s:800;e:easeInOutCubic;" data-transform_out="y:200px;opacity:0;s:300;" data-voffset="95" data-start="1600">
+                            <a href="#" class="slide-button">Get Started</a>
+                        </div>
+                    </li>*@
             </ul>
         </div>
     </div>
