--- a/WeekendTaskMVCProject/WeekendTaskMVC/Views/Shared/_LayoutTemp.cshtml
+++ b/WeekendTaskMVCProject/WeekendTaskMVC/Views/Shared/_LayoutTemp.cshtml
@@ -6,8 +6,6 @@
 <!DOCTYPE html>
 <html lang="en">
 
-
-<!-- Mirrored from templates.aucreative.co/bemax/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 15 Jun 2019 09:32:19 GMT -->
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -63,7 +61,7 @@
                                 <nav class="header-navbar">
                                     <ul class="navbar-menu">
                                         <li class="active">
-                                            <a href="#">Home</a>
+                                            <a href="@Url.Action("Index","Home")">Home</a>
                                             <ul class="sub-menu">
                                                 <li>
                                                     <a href="@Url.Action("Home1","Home")">Home Page 1</a>
