--- a/WeekendTaskMVCProject/WeekendTaskMVC/Views/About/Index.cshtml
+++ b/WeekendTaskMVCProject/WeekendTaskMVC/Views/About/Index.cshtml
@@ -5,7 +5,7 @@
     <!-- #Content -->
     <!-- About -->
     <section>
-        <div class="section-wrapper bg-fixed" data-image="~/Public/images/bg-image_07.jpg">
+        <div class="section-wrapper bg-fixed" data-image="/Public/images/bg-image_07.jpg">
             <div class="overlay" data-color="rgba(255,255,255,0.9)"></div>
             <div class="container">
                 <div class="row  justify-content-center">
@@ -346,7 +346,7 @@
     <!-- End Partner -->
     <!-- Newsletter -->
     <section>
-        <div class="section-wrapper bg-fixed p-t-58 p-b-80" data-image="~/Public/images/mac-book.jpg">
+        <div class="section-wrapper bg-fixed p-t-58 p-b-80" data-image="/Public/images/mac-book.jpg">
             <div class="overlay" data-color="rgba(41,182,246,.9)"></div>
             <div class="container">
                 <div class="section-title section-title-style-1">
